# aarokya

./: .gitignore  CLAUDE.md  LAUNCH_LOCAL.md  README.md  fleet-tasks-phase1.md  fleet-tasks-phase2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
apps/control-center/: .eslintrc.json  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/migrations/: 20240101000000_initial_schema.sql  20240102000000_add_claim_metadata.sql  20240103000000_consent_family_records.sql  20240104000000_user_type_length.sql
backend/src/: lib.rs  main.rs
backend/src/api/: admin.rs  auth.rs  checkin.rs  consent.rs  contributions.rs  documents.rs  family.rs  health.rs  hsa.rs  insurance.rs  mod.rs  partners.rs
backend/src/config/: mod.rs
backend/src/domain/: checkin.rs  claim.rs  consent.rs  contribution.rs  document.rs  family.rs  health_profile.rs  hsa.rs  insurance.rs  mod.rs  partner.rs  user.rs
backend/src/infrastructure/: auth.rs  database.rs  error.rs  mod.rs  security.rs
backend/tests/: README.md  hsa_contributions_test.rs  insurance_claims_test.rs  partners_auth_test.rs  security_test.rs
docker/: .env.example  Dockerfile.backend  Dockerfile.control-center  docker-compose.prod.yml  docker-compose.yml
reviews/: api_docs_review.md  backend_code_review.md  backend_test_review.md  database_schema_review.md  devops_review.md  frontend_code_review.md  frontend_test_review.md  security_review.md
scripts/: launch-local.sh
(+187 files in other folders)
